# rscfl

./: .gitignore  AUTHORS  LICENSE  README.md  costs.h  ftrace_cmd.sh  resourceful.txt  user.cpp
archive/: test.rst
archive/notes/: config.c  overview.tex
design/: design.tex
doc/: Meeting_20_03_14.txt  cleanup.org  resourceful.txt
doc/figures/: Resourceful_SysDiagram.pxm
doc/hotdep/: Makefile  overheads.eps_tex  sys_design.eps
doc/hotdep/mk/: figures.mk
experiments/raw_data/: clean_10000.txt  clean_10k_2.txt  clean_10k_3.txt  instrumented_10000.txt  instrumented_10k_2.txt  instrumented_10k_3.txt
experiments/scripts/: parse_and_plot.py  parse_and_plot1.py
figures/: Sys_Diagram_Paper.pxm
hotdep/: dist_and_fit2.pdf_tex  hotdep.bib  hotdep.tex  overheads.eps
hotdep/mk/: Makefile  texarticle.mk
overview/: overview.tex
src/: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  Findrscfl.cmake  TODO  res_common.c
src/cmake/: InternalMacros.cmake  LICENSE  MacroOutOfSourceBuild.cmake  capnpc.cmake  rscfl_kbuild.cmake  stap.cmake  subsys.cmake
src/cmake/modules/: FindDoxygen.cmake  FindSphinx.cmake  Findcapnproto.cmake  Findgtest.cmake  Findnanomsg.cmake
src/doc/: CMakeLists.txt  README  advanced.rst  api-doc.rst  architecture.rst  build.rst  conf.py.in  index.rst  intro.rst  project.rst  user-api.rst
src/doc/.extensions/autodoc_c/: __init__.py  parser.py
src/doc/.extensions/autodoc_c/clang/: cindex.py
src/examples/: CMakeLists.txt  bran_example.c  read_accounting.c  simple_api.c  small-big-write-sync.c  socket_tester.c  value_validation.c
src/include/: config.h.in  costs.h  res_common.h  resourceful.h
src/include/res_kernel/: probes.h  res_comm.h  stap_shim.h
src/include/res_user/: res_api.h
src/include/rscfl/: PMurHash.h  cJSON.h  costs.h  macros.h  res_common.h
src/include/rscfl/kernel/: acct.h  chardev.h  cpu.h  hasht.h  kamprobes.h  kprobe_manager.h  measurement.h  netlink.h  perf.h  priv_kallsyms.h  probe_manager.h  probes.h  rscfl.h  sched.h  shdw.h  stap_shim.h  subsys.h  xen.h
src/include/rscfl/user/: res_api.h
src/kernel/: Kbuild  Makefile.in  PMurHash.c  acct.c  chardev.c  cpu.c  hasht.c  kamprobes.c  kprobes.c  perf.c  priv_kallsyms.c  probes.c  res_comm.c  res_module.c  resourceful.c  resourceful.h  resourceful.stp  rscfl.c  sched.c  shdw.c  stap_shim.c  subsys.c  xen.c
src/kernel/counters/: measurement.c  perf.c
src/kernel/measurement/: measurement.c  perf.c
src/kernel/tapsets/: chardev.c  cpu.c  hasht.c  kamprobes.c  kprobe_manager.c  netlink.c  probe_manager.c  probes.c  sched.c  sched.stp  shim.stp  stap_shim.c
src/lib/: CMakeLists.txt  cJSON.c  res_api.c  resourceful.c  resourceful.h
src/scripts/: CMakeLists.txt  blacklist.sh  elftools-relo.py  find_subsystems.py  fix-stap.sh  gen-license-head.sh  hypervisor_os_stress.py  hypervisor_stop_stress.sh  license-head.tpl  rscfl_stop.c
src/scripts/subsys_discovery/: README  find_subsystems.py  parse_ctags.py  parse_ftrace.py  subsys_static_discovery.py
src/scripts/web_replay/: generate_files.sh  generate_requests.sh  generate_timestamped_requests.sh  squid-to-hosts.sh
src/tests/: CMakeLists.txt  api_test.cpp  cycles_test.cpp  gtest_sanity_check.cpp  sched_test.cpp  sendfile_test.cpp  shdw_test.cpp  socket_test.cpp  stress_test.cpp  wct_test.cpp
